--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
+    compile files('D:/code/android/Jt808/libs/AMap_2DMap_V2.9.0_20160525.jar')
+    compile files('D:/code/android/Jt808/libs/AMap_Location_V2.4.1_20160414.jar')
 }
